Revision history for Perl extension Net::UPS.
==============================================

{{$NEXT}}

0.07 October 24, 2013
   * honour proxy environment variables

0.06 October 22, 2013
   * added Changes
   * more testing for RT #87852

0.05-TRIAL October 15, 2014

    * FIX RT #87852 fix default URLs and allow custom ones
    * FIX RT #20540 fix & test sizes sorting
    * FIX RT #24190 ignore warnings from UPS
    * FIX RT #58369 don't put unknown sizes in hash
    * FIX RT #21088 better error handling for rates
    * ported to Dist::Zilla

0.04 February 2, 2006

    * FIX RT #17906 fix oversized rules

0.03 Thursday, November 10, 2005

    * NEW: support for configuration file
    * NEW: Address objects can be validated directly

0.02 Sunday, September 11, 2005

    * NEW: results can now be cached with the help of 'cache_life' object attribute
    * NEW: live() class method and 'live' compile-time switch introduced
    * NEW: 'limit_to' and 'exclude' options supported by shop_for_rates()
    * NEW: shop_for_rates() return is sorted by total_charges() in ascending order


0.01  Tue May  4 17:51:08 2004
    - original version; created by h2xs 1.21 with options
        -A -X -n Net::UPS
