@@ -2,6 +2,7 @@ Revision history for Perl extension Net::UPS.
 ==============================================
 
 {{$NEXT}}
+   * FIX RT #58402 added new Service Codes
 
 0.07 October 24, 2013
    * honour proxy environment variables
